--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,4 +1,5 @@
 
+[working on it -- 12/19/2015, 4:34pm]
 **** DONE ****
 - Welcome Page: Links to teachers and linka to Needs list
 - Teachers: Have model, seed data, can show list, create new teachers, edit/update teachers
@@ -9,7 +10,7 @@
     - when new Need created, it defaults the Status to 'Active'
 
 ************* BASIC FUNCTIONALITY TO DO (Version 1.0) *******************
-- NEXT: GitHub / git? [working on it -- 12/19/2015, 4:11pm]
+- NEXT: GitHub / git?
 - DOING NOW: teacher_needs status
     - SET: Allowed statuses: "Active", "Filled", "Closed"
         Active: When a new item is created.
